@@ -5,6 +5,7 @@ V0.9.3
 ------
     * Bumped minimum django verion: 1.11.18 (last python2.7 version)
     * Test more mongo version
+    * Recursivly check for keys that start with $ and replace with unicode equivalent
 
 V0.9.2
 ------
